--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
-  "presets": ["env"],
+  "presets": ["@babel/env", "@babel/react"],
   "plugins": [
-    "transform-object-rest-spread",
-    "transform-react-jsx"
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-syntax-class-properties"
   ]
 }
