--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "learn-programming",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Simple set to teach programming to children",
   "main": "build/index.js",
   "homepage": "https://github.com/childfoot/learn-programming",
@@ -13,15 +13,15 @@
   "license": "MIT",
   "dependencies": {
     "react": "^16.4.1",
-    "webpack": "^4.16.1"
+    "react-dom": "^16.4.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-env": "^1.7.0",
+    "webpack": "^4.16.1",
+    "@babel/core": "^7.0.0-beta.54",
+    "@babel/preset-env": "^7.0.0-beta.54",
+    "babel-loader": "^8.0.0-beta",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.54",
+    "@babel/preset-react": "^7.0.0-beta.54",
     "webpack-cli": "^3.1.0"
   },
   "scripts": {
